--- a/src/components/ui/app-header/app-header.module.css
+++ b/src/components/ui/app-header/app-header.module.css
@@ -35,3 +35,9 @@
   align-items: center;
   margin: 0 auto;
 }
+
+.nav_link_wrapper {
+  display: flex;
+  align-items: center;
+    text-decoration: none;
+}
